Use constructor when instantiating classes